[package]
name = "audio-encryption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "3.4.0"
aes = "0.7.4"
rand = "0.8.4"
block-modes = "0.8.1"
block-padding = "0.2.1"
cipher = "0.3.0"
sodiumoxide = "0.2"